--- a/templates/tracker/expenditures_list.html
+++ b/templates/tracker/expenditures_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanize tz querystring %}
+{% load humanizelib tz querystring %}
 
 {% block page_title %}Expenditures{% endblock %}
 
