--- a/templates/tracker/product_detail.html
+++ b/templates/tracker/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load humanize %}
+{% load humanizelib %}
 
 {% block page_title %}Whole Sale Product Details{% endblock %}
 
