--- a/templates/tracker/send_bulk_debt_whatsapp.html
+++ b/templates/tracker/send_bulk_debt_whatsapp.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanize %}
+{% load humanizelib %}
 
 {% block page_title %}Send Bulk WhatsApp Reminders{% endblock %}
 
