--- a/templates/tracker/sales_all_print.html
+++ b/templates/tracker/sales_all_print.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanize tz %}
+{% load humanizelib tz %}
 
 {% block page_title %}All Sales (Print){% endblock %}
 
